[package]
name = "sample"
version = "0.1.0"
authors = ["srz_zumix"]
edition = "2018"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

